--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,15 +10,8 @@
   --black-ododod:#0d0d0d;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 h1,h2,h3,h4,h5,h6 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     line-height: 1.1;
 }
 
